--- a/app/src/main/res/layout/list_item_forecast_today.xml
+++ b/app/src/main/res/layout/list_item_forecast_today.xml
@@ -1,18 +1,102 @@
 <?xml version="1.0" encoding="utf-8"?>
 
 
-<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@android:color/white"
-    app:columnCount="2">
+<!--<android.support.v7.widget.GridLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
+    <!--xmlns:app="http://schemas.android.com/apk/res-auto"-->
+    <!--xmlns:tools="http://schemas.android.com/tools"-->
+    <!--android:layout_width="match_parent"-->
+    <!--android:layout_height="match_parent"-->
+    <!--android:background="@android:color/white"-->
+    <!--app:columnCount="2">-->
 
-    <android.support.v7.widget.Space
-        app:layout_columnSpan="2"
-        app:layout_columnWeight="1"
-        app:layout_rowWeight="1" />
+    <!--<android.support.v7.widget.Space-->
+        <!--app:layout_columnSpan="2"-->
+        <!--app:layout_columnWeight="1"-->
+        <!--app:layout_rowWeight="1" />-->
+
+    <!--<TextView-->
+        <!--android:id="@+id/list_item_date_textview"-->
+        <!--android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"-->
+        <!--android:layout_marginTop="@dimen/abc_list_item_padding_horizontal_material"-->
+        <!--android:fontFamily="sans-serif"-->
+        <!--android:gravity="center_horizontal"-->
+        <!--android:textAppearance="@style/TextAppearance.AppCompat.Title"-->
+        <!--android:textColor="@color/secondary_text"-->
+        <!--app:layout_columnSpan="2"-->
+        <!--app:layout_columnWeight="1"-->
+        <!--app:layout_gravity="fill_horizontal"-->
+        <!--tools:text="Today, April 03" />-->
+
+    <!--<android.support.v7.widget.Space-->
+        <!--app:layout_columnSpan="2"-->
+        <!--app:layout_columnWeight="1"-->
+        <!--app:layout_rowWeight="1" />-->
+
+    <!--<ImageView-->
+        <!--android:id="@+id/list_item_icon"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_height="wrap_content"-->
+        <!--android:adjustViewBounds="true"-->
+        <!--android:maxHeight="@dimen/today_icon"-->
+        <!--android:maxWidth="@dimen/today_icon"-->
+        <!--app:layout_columnWeight="1"-->
+        <!--app:layout_gravity="fill_horizontal"-->
+        <!--tools:src="@drawable/art_clouds" />-->
+
+    <!--<TextView-->
+        <!--android:id="@+id/list_item_high_textview"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:fontFamily="sans-serif-light"-->
+        <!--android:gravity="center_horizontal"-->
+        <!--android:textColor="@color/primary_text"-->
+        <!--android:textSize="72sp"-->
+        <!--app:layout_columnWeight="1"-->
+        <!--app:layout_gravity="fill_horizontal"-->
+        <!--tools:text="19" />-->
+
+    <!--<TextView-->
+        <!--android:id="@+id/list_item_forecast_textview"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:gravity="center_horizontal"-->
+        <!--android:fontFamily="sans-serif"-->
+        <!--android:textAppearance="?android:attr/textAppearanceLarge"-->
+        <!--android:textColor="@color/secondary_text"-->
+        <!--app:layout_columnWeight="1"-->
+        <!--tools:text="Rainy"-->
+        <!--/>-->
+
+    <!--<TextView-->
+        <!--android:id="@+id/list_item_low_textview"-->
+        <!--android:layout_width="0dp"-->
+        <!--android:layout_marginBottom="@dimen/abc_list_item_padding_horizontal_material"-->
+        <!--android:fontFamily="sans-serif-light"-->
+        <!--android:gravity="center_horizontal"-->
+        <!--android:textColor="@color/secondary_text"-->
+        <!--android:textSize="36sp"-->
+        <!--app:layout_columnWeight="1"-->
+        <!--tools:text="10" />-->
+
+
+
+
+<!--</android.support.v7.widget.GridLayout>-->
+
+
+
+    <!-- Layout for weather forecast list item for today -->
+<FrameLayout
+xmlns:android="http://schemas.android.com/apk/res/android"
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="wrap_content"
+android:background="@drawable/touch_selector_white"
+android:elevation="4dp"
+    >
+<android.support.v7.widget.GridLayout
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    app:columnCount="2">
 
     <TextView
         android:id="@+id/list_item_date_textview"
@@ -27,15 +111,9 @@
         app:layout_gravity="fill_horizontal"
         tools:text="Today, April 03" />
 
-    <android.support.v7.widget.Space
-        app:layout_columnSpan="2"
-        app:layout_columnWeight="1"
-        app:layout_rowWeight="1" />
-
     <ImageView
         android:id="@+id/list_item_icon"
         android:layout_width="0dp"
-        android:layout_height="wrap_content"
         android:adjustViewBounds="true"
         android:maxHeight="@dimen/today_icon"
         android:maxWidth="@dimen/today_icon"
@@ -57,13 +135,12 @@
     <TextView
         android:id="@+id/list_item_forecast_textview"
         android:layout_width="0dp"
-        android:gravity="center_horizontal"
         android:fontFamily="sans-serif"
-        android:textAppearance="?android:attr/textAppearanceLarge"
+        android:gravity="center_horizontal"
+        android:textAppearance="@style/TextAppearance.AppCompat.Title"
         android:textColor="@color/secondary_text"
         app:layout_columnWeight="1"
-        tools:text="Rainy"
-        />
+        tools:text="Rainy" />
 
     <TextView
         android:id="@+id/list_item_low_textview"
@@ -76,11 +153,8 @@
         app:layout_columnWeight="1"
         tools:text="10" />
 
-
-
-
 </android.support.v7.widget.GridLayout>
-
+</FrameLayout>
 
 <!--<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"-->
 <!--android:layout_width="match_parent"-->
