--- a/app/src/main/res/layout/detail_extras_grid.xml
+++ b/app/src/main/res/layout/detail_extras_grid.xml
@@ -2,7 +2,8 @@
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
+    android:layout_height="match_parent"
+    android:fillViewport="true">
 
     <android.support.v7.widget.GridLayout
         android:id="@+id/detail_additional_pane"
