--- a/app/src/main/res/layout-sw600dp-port/activity_main.xml
+++ b/app/src/main/res/layout-sw600dp-port/activity_main.xml
@@ -40,9 +40,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_below="@id/sunshine_logo_imageview"
-        app:cardElevation="@dimen/detail_card_elevation"
         android:layout_marginLeft="@dimen/cardview_compat_inset_shadow"
         android:layout_marginRight="@dimen/cardview_compat_inset_shadow"
+        app:cardElevation="@dimen/detail_card_elevation"
         app:cardPreventCornerOverlap="false">
 
     </android.support.v7.widget.CardView>
@@ -50,8 +50,12 @@
     <fragment
         android:id="@+id/fragment_forecast"
         android:name="com.example.android.sunshine.app.ForecastFragment"
-        android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:layout_width="match_parent"
         android:layout_below="@id/weather_detail_container"
-        tools:layout="@android:layout/list_content" />
+        tools:layout="@android:layout/list_content"
+        android:choiceMode="singleChoice"
+        app:autoSelectView="true"
+
+        />
 </RelativeLayout>
