--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -13,6 +13,10 @@
     <style name="SettingsTheme" parent="AppTheme">
     </style>
 
+    <style name="AppTheme.Main" parent="@style/AppTheme"/>
+
+    <style name="AppTheme.Details" parent="@style/AppTheme"/>
+
     <!-- main activity toolbar style -->
     <style name="Toolbar" parent="Widget.AppCompat.Toolbar">
         <item name="android:background">?attr/colorPrimary</item>
@@ -27,17 +31,3 @@
 
 </resources>
 
-    <!--&lt;!&ndash; Main activity theme. &ndash;&gt;-->
-    <!--<style name="ForecastTheme" parent="AppTheme">-->
-        <!--<item name="actionBarStyle">@style/ActionBar.Solid.Sunshine.NoTitle</item>-->
-    <!--</style>-->
-
-    <!--&lt;!&ndash; main activity action bar styles &ndash;&gt;-->
-    <!--<style name="ActionBar.Solid.Sunshine.NoTitle" parent="@style/Widget.AppCompat.Light.ActionBar.Solid.Inverse">-->
-        <!--<item name="displayOptions">useLogo|showHome</item>-->
-        <!--<item name="logo">@drawable/ic_logo</item>-->
-    <!--</style>-->
-
-
-
-<!--</resources>-->
