--- a/app/src/main/res/layout/widget_today_small.xml
+++ b/app/src/main/res/layout/widget_today_small.xml
@@ -11,7 +11,8 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
-    android:padding="4dp">
+    android:padding="8dp"
+    android:background="@color/primary">
 
     <ImageView
         android:id="@+id/widget_icon"
