--- a/app/src/main/res/layout/widget_detail_list_item.xml
+++ b/app/src/main/res/layout/widget_detail_list_item.xml
@@ -4,8 +4,7 @@
     android:id="@+id/widget_list_item"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:background="@drawable/touch_selector_white"
-    >
+    android:background="@color/primary_light">
 
     <LinearLayout
         android:layout_width="match_parent"
