--- a/wear/src/main/res/layout/watchface.xml
+++ b/wear/src/main/res/layout/watchface.xml
@@ -10,29 +10,82 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:gravity="center">
+        android:gravity="center"
+        android:layout_marginTop="64dp">
 
         <TextView
             android:id="@+id/wear_day_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="Today"
-            android:text="Today"/>
+            android:text="Today"
+            android:layout_weight="1"
+            android:gravity="center"/>
 
         <TextView
             android:id="@+id/wear_month_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="December"
-            android:text="December"/>
+            android:text="December"
+            android:layout_weight="1"/>
 
         <TextView
             android:id="@+id/wear_date_textview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             tools:text="05"
-            android:text="05"/>
+            android:text="05"
+            android:layout_weight="1"/>
     </LinearLayout>
 
+    <View
+        android:layout_width="32dp"
+        android:layout_height="1dp"
+        android:background="@color/white"
+        android:gravity="center"
+        android:layout_gravity="center"
+        android:layout_marginTop="8dp"
+        android:layout_marginBottom="8dp"/>
+
+
+
+    <LinearLayout
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal">
+
+        <ImageView
+            android:id="@+id/wear_icon_imageview"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:src="@drawable/ic_snow"
+            android:layout_weight="1"
+            android:gravity="center"/>
+
+
+        <TextView
+            android:id="@+id/wear_hi_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            tools:text="55"
+            android:text="55"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:textSize="32sp"/>
+
+
+        <TextView
+            android:id="@+id/wear_low_textview"
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            tools:text="32"
+            android:text="32"
+            android:layout_weight="1"
+            android:gravity="center_vertical"
+            android:textSize="32sp"/>
+
+
+    </LinearLayout>
 
 </LinearLayout>
