--- a/wear/src/main/res/layout/watchface.xml
+++ b/wear/src/main/res/layout/watchface.xml
@@ -3,52 +3,33 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:orientation="vertical"
-    android:gravity="center_vertical">
+    android:gravity="center_vertical"
+    android:orientation="vertical">
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
+        android:layout_marginTop="64dp"
         android:gravity="center"
-        android:layout_marginTop="64dp">
-
-        <TextView
-            android:id="@+id/wear_day_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="Today"
-            android:text="Today"
-            android:layout_weight="1"
-            android:gravity="center"/>
-
-        <TextView
-            android:id="@+id/wear_month_textview"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            tools:text="December"
-            android:text="December"
-            android:layout_weight="1"/>
+        android:orientation="horizontal">
 
         <TextView
             android:id="@+id/wear_date_textview"
-            android:layout_width="wrap_content"
+            android:layout_width="0dp"
             android:layout_height="wrap_content"
-            tools:text="05"
-            android:text="05"
-            android:layout_weight="1"/>
+            android:layout_weight="1"
+            android:gravity="center"
+            tools:text="December" />
     </LinearLayout>
 
     <View
         android:layout_width="32dp"
         android:layout_height="1dp"
-        android:background="@color/white"
-        android:gravity="center"
         android:layout_gravity="center"
+        android:layout_marginBottom="8dp"
         android:layout_marginTop="8dp"
-        android:layout_marginBottom="8dp"/>
-
-
+        android:background="@color/white"
+        android:gravity="center" />
 
     <LinearLayout
         android:layout_width="match_parent"
@@ -59,32 +40,27 @@
             android:id="@+id/wear_icon_imageview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:src="@drawable/ic_snow"
             android:layout_weight="1"
-            android:gravity="center"/>
-
+            android:gravity="center"
+            android:src="@drawable/ic_snow" />
 
         <TextView
             android:id="@+id/wear_hi_textview"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            tools:text="55"
-            android:text="55"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:textSize="32sp"/>
-
+            android:textSize="32sp"
+            tools:text="55" />
 
         <TextView
             android:id="@+id/wear_low_textview"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
-            tools:text="32"
-            android:text="32"
             android:layout_weight="1"
             android:gravity="center_vertical"
-            android:textSize="32sp"/>
-
+            android:textSize="32sp"
+            tools:text="32" />
 
     </LinearLayout>
 
