--- a/wear/src/main/res/layout/watchface.xml
+++ b/wear/src/main/res/layout/watchface.xml
@@ -34,22 +34,23 @@
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:layout_marginLeft="8dp"
+        android:layout_marginRight="8dp"
         android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/wear_icon_imageview"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:layout_weight="1"
-            android:gravity="center"
-            android:src="@drawable/ic_snow" />
+            android:layout_weight="2"
+            android:gravity="center" />
 
         <TextView
             android:id="@+id/wear_hi_textview"
             android:layout_width="wrap_content"
             android:layout_height="match_parent"
             android:layout_weight="1"
-            android:gravity="center_vertical"
+            android:gravity="center"
             android:textSize="32sp"
             tools:text="55" />
 
