--- a/wear/src/main/res/layout/watchface.xml
+++ b/wear/src/main/res/layout/watchface.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_weight="1"
             android:gravity="center"
-            tools:text="December" />
+            tools:text="Monday December 12" />
     </LinearLayout>
 
     <View
@@ -43,7 +43,8 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="2"
-            android:gravity="center" />
+            android:gravity="center"
+            tools:src="@drawable/ic_clear"/>
 
         <TextView
             android:id="@+id/wear_hi_textview"
@@ -52,7 +53,7 @@
             android:layout_weight="1"
             android:gravity="center"
             android:textSize="32sp"
-            tools:text="55" />
+            tools:text="85"/>
 
         <TextView
             android:id="@+id/wear_low_textview"
@@ -61,7 +62,7 @@
             android:layout_weight="1"
             android:gravity="center_vertical"
             android:textSize="32sp"
-            tools:text="32" />
+            tools:text="75" />
 
     </LinearLayout>
 
